--- a/GetApiPractice/Podfile
+++ b/GetApiPractice/Podfile
@@ -4,7 +4,9 @@
 target 'GetApiPractice' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  pod 'CBFlashyTabBarController'
   pod 'OpenGraph'
+
   # Pods for GetApiPractice
 
 end
